--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<button type="submit"></button>
 			</form>
 		</div>
-		<div>
+		<div class="ba-column-list">
 			<aside class="ba-column">
 				<h2>PEOPLE</h3>
 					<ul class="ba-hugesearch-list">
